--- a/csharp-intermediate/csharp-intermediate.csproj
+++ b/csharp-intermediate/csharp-intermediate.csproj
@@ -44,7 +44,10 @@
   <ItemGroup>
     <Compile Include="Calculator.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DbMigrator.cs" />
     <Compile Include="HttpCookie.cs" />
+    <Compile Include="Installer.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Point.cs" />
